adicionado comando de leitura .jar