@@ -18,4 +18,6 @@ Meanwhile, the compiled output files will be generated in the `bin` folder by de
 The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
 
 
-sudo docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=1q2w3e4r@#$" -p 1433:1433 --name sql1 --hostname sql1 -d 0146ed2c71b5 edcbe3651c17941e1fb65c4e05c5443b4f6fff4f84a2a201751cc39c3787339f
+run jar
+
+java -jar --module-path /Users/macbookair/Documents/JavaLibs/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml File.jar
